--- a/pocket-buddha/app/src/main/res/values/dimens.xml
+++ b/pocket-buddha/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
 
     <dimen name="cardview_linespacing_extra">6dp</dimen>
     <dimen name="cardview_icon_padding_right">5dp</dimen>
+
+    <dimen name="splash_screen_image_size">275dp</dimen>
 </resources>
