--- a/pocket-buddha/app/src/main/res/layout/splash_screen.xml
+++ b/pocket-buddha/app/src/main/res/layout/splash_screen.xml
@@ -8,19 +8,19 @@
 	android:gravity="center">
 
 	<ImageView
+		android:id="@+id/splash_screen_imageview"
 		android:layout_width="@dimen/splash_screen_image_size"
-		android:layout_height="@dimen/splash_screen_image_size"
-		android:src="@drawable/happy_monk_275x275"/>
+		android:layout_height="@dimen/splash_screen_image_size"/>
 
 	<TextView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:gravity="center"
-		android:text="One peaceful moment."
+		android:text="@string/splash_screen_welcome_msg"
 		style="@style/Base.TextAppearance.AppCompat.Headline"/>
 
 	<TextView
-		android:id="@+id/splash_screen_progress_msg"
+		android:id="@+id/splash_screen_message_textview"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:gravity="center"
