Added home activity, detail activity, model and view in progress.

--- a/pocket-buddha/app/src/main/res/layout/favorites_app_bar.xml
+++ b/pocket-buddha/app/src/main/res/layout/favorites_app_bar.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context="net.usrlib.android.pocketbuddha.ui.StarredActivity">
+	tools:context=".view.FavoritesActivity">
 
 	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
@@ -22,10 +22,10 @@
 
 	</android.support.design.widget.AppBarLayout>
 
-	<include layout="@layout/starred_recycler_view"/>
+	<include layout="@layout/favorites_recycler_view"/>
 
 	<include
-		layout="@layout/menu_starred_floating_buttons"
+		layout="@layout/menu_favorites_floating_buttons"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		app:layout_anchorGravity="top|right|end"/>
