--- a/pocket-buddha/app/src/main/res/layout/favorites_activity.xml
+++ b/pocket-buddha/app/src/main/res/layout/favorites_activity.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
-	android:id="@+id/starred_drawer_layout"
+	android:id="@+id/home_drawer_layout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
@@ -9,7 +9,7 @@
 	android:fitsSystemWindows="true"
 	tools:openDrawer="start">
 	<include
-		layout="@layout/starred_app_bar"
+		layout="@layout/favorites_app_bar"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"/>
 	<android.support.design.widget.NavigationView
