--- a/pocket-buddha/app/src/main/res/values/colors.xml
+++ b/pocket-buddha/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1976d2</color>
-    <color name="colorPrimaryDark">#1565c0</color>
+    <color name="colorPrimary">#0091EA</color>
+    <color name="colorPrimaryDark">#007EE6</color>
     <color name="colorAccent">#FF5733</color>
     <color name="gray">#CCC</color>
     <color name="dark">#263238</color>
