--- a/pocket-buddha/app/src/main/res/layout/favorites_app_bar.xml
+++ b/pocket-buddha/app/src/main/res/layout/favorites_app_bar.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context=".view.FavoritesActivity">
+	tools:context=".ui.FavoritesActivity">
 
 	<android.support.design.widget.AppBarLayout
 		android:layout_width="match_parent"
