--- a/pocket-buddha/app/src/main/res/layout/home_app_bar.xml
+++ b/pocket-buddha/app/src/main/res/layout/home_app_bar.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:fitsSystemWindows="true"
-	tools:context=".view.HomeActivity">
+	tools:context=".ui.HomeActivity">
 
 	<android.support.design.widget.AppBarLayout
 		android:id="@+id/home_detail_app_bar"
