--- a/pocket-buddha/app/src/main/res/xml/widget_info.xml
+++ b/pocket-buddha/app/src/main/res/xml/widget_info.xml
@@ -2,7 +2,6 @@
 <appwidget-provider
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:initialLayout="@layout/widget_layout"
-	android:minHeight="@dimen/widget_default_height"
 	android:minWidth="@dimen/widget_default_width"
-	android:resizeMode="horizontal|vertical"
-	android:updatePeriodMillis="1800000"/>
+	android:minHeight="@dimen/widget_default_height"
+	android:resizeMode="horizontal|vertical"/>
