--- a/pocket-buddha/app/src/main/res/layout/widget_detail_list_item.xml
+++ b/pocket-buddha/app/src/main/res/layout/widget_detail_list_item.xml
@@ -17,72 +17,41 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-        android:layout_toRightOf="@id/daily_widget_image"
+		android:layout_toRightOf="@id/daily_widget_image"
 		android:layout_weight="1"
 		android:background="#FFFFFF"
 		android:orientation="vertical">
+
 		<TextView
-			android:id="@+id/daily_widget_term"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_gravity="top"
 			android:gravity="center"
 			android:padding="3dp"
-			android:text="word"
+			android:text="@string/widget_title"
 			android:textStyle="bold"
 			android:background="@color/pariyatti"
 			style="@style/Base.TextAppearance.AppCompat.Medium.Inverse"/>
-		<TextView
-			android:id="@+id/daily_widget_definition"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_gravity="top"
-			android:gravity="start"
-			android:padding="3dp"
-			android:text="description"
-            android:textColor="@color/dark"
-			style="@style/Base.TextAppearance.AppCompat.Small"/>
-		<!--<Button-->
-			<!--android:id="@+id/widget_button"-->
-			<!--android:layout_width="match_parent"-->
-			<!--android:layout_height="wrap_content"-->
-			<!--android:layout_gravity="bottom"-->
-			<!--android:text="R"/>-->
+
+			<TextView
+				android:id="@+id/daily_widget_term"
+				style="@style/Base.TextAppearance.AppCompat.Medium"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="top"
+				android:padding="3dp"
+				android:text="word"
+				android:textColor="@color/dark"
+				android:textStyle="bold|italic"/>
+			<TextView
+				android:id="@+id/daily_widget_definition"
+				style="@style/Base.TextAppearance.AppCompat.Small"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="top"
+				android:padding="3dp"
+				android:text="description"
+				android:textColor="@color/dark"/>
+
 	</LinearLayout>
 </RelativeLayout>
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-				<!--android:layout_width="match_parent"-->
-				<!--android:layout_height="match_parent"-->
-				<!--android:orientation="horizontal" >-->
-
-<!--<ImageView-->
-	<!--android:id="@+id/daily_widget_image"-->
-	<!--android:layout_width="wrap_content"-->
-	<!--android:layout_height="wrap_content"-->
-	<!--android:layout_alignParentRight="true"-->
-	<!--android:layout_marginTop="8dip"-->
-	<!--android:src="@mipmap/ic_launcher" />-->
-
-<!--<TextView-->
-	<!--android:id="@+id/daily_widget_term"-->
-	<!--android:layout_width="wrap_content"-->
-	<!--android:layout_height="wrap_content"-->
-	<!--android:layout_alignParentLeft="true"-->
-	<!--android:layout_toRightOf="@id/daily_widget_image"-->
-	<!--android:singleLine="true"-->
-	<!--android:textSize="14sp"-->
-	<!--android:textStyle="bold"-->
-	<!--android:text="Heading"/>-->
-
-<!--<TextView-->
-	<!--android:id="@+id/daily_widget_definition"-->
-	<!--android:layout_width="wrap_content"-->
-	<!--android:layout_height="wrap_content"-->
-	<!--android:layout_alignParentLeft="true"-->
-	<!--android:layout_below="@id/daily_widget_term"-->
-	<!--android:layout_marginTop="5dip"-->
-	<!--android:layout_toRightOf="@id/daily_widget_image"-->
-	<!--android:textSize="14sp"-->
-	<!--android:text="Content"/>-->
-
-<!--</RelativeLayout>-->
