--- a/pocket-buddha/app/src/main/res/layout/favorites_item_card_view.xml
+++ b/pocket-buddha/app/src/main/res/layout/favorites_item_card_view.xml
@@ -6,10 +6,10 @@
 	xmlns:card_view="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:layout_margin="0dp"
-	android:elevation="11dp"
+	android:layout_margin="@dimen/minimal_layout_size"
+	android:elevation="@dimen/cardview_elevation"
 	app:layout_anchorGravity="bottom"
-	card_view:contentPadding="8dp">
+	card_view:contentPadding="@dimen/default_content_padding">
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -21,19 +21,20 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="center_vertical"
-			android:paddingRight="8dp"
-			android:paddingEnd="8dp"
+			android:paddingRight="@dimen/default_content_padding"
+			android:paddingEnd="@dimen/default_content_padding"
 			android:gravity="center">
 
 			<TextView
 				android:id="@+id/favorites_item_circle"
 				style="@style/TextAppearance.AppCompat.Small.Inverse"
-				android:layout_width="36dp"
-				android:layout_height="36dp"
+				android:layout_width="@dimen/drawable_circle_size"
+				android:layout_height="@dimen/drawable_circle_size"
 				android:layout_centerInParent="true"
 				android:background="@drawable/circle"
 				android:gravity="center"
-				android:textColor="@android:color/white"/>
+				android:textColor="@android:color/white"
+				android:contentDescription="@string/content_circle_description"/>
 		</LinearLayout>
 
 		<TextView
