--- a/pocket-buddha/app/src/main/res/layout/favorites_item_swipe_view.xml
+++ b/pocket-buddha/app/src/main/res/layout/favorites_item_swipe_view.xml
@@ -5,12 +5,12 @@
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:paddingTop="0dp"
+	android:paddingTop="@dimen/minimal_layout_size"
 	app:dragEdge="right"
 	app:mode="normal">
 
 	<FrameLayout
-		android:layout_width="60dp"
+		android:layout_width="@dimen/swipe_reveal_layout_width"
 		android:layout_height="match_parent">
 
 			<LinearLayout
@@ -24,12 +24,13 @@
 					android:id="@+id/favorites_item_delete_icon"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:src="@drawable/ic_delete_forever_black_36dp"/>
+					android:src="@drawable/ic_delete_forever_black_36dp"
+					android:contentDescription="@string/content_action_delete"/>
 
 				<TextView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:text="Delete"
+					android:text="@string/action_delete"
 					android:theme="@style/CardviewTextStyle"/>
 			</LinearLayout>
 	</FrameLayout>
