--- a/pocket-buddha/app/src/main/res/layout/home_recycler_item.xml
+++ b/pocket-buddha/app/src/main/res/layout/home_recycler_item.xml
@@ -5,10 +5,10 @@
 	android:id="@+id/home_recycler_item_card_view"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-    card_view:cardUseCompatPadding="true"
-	card_view:cardElevation="11dp"
-    android:elevation="11dp"
-	android:layout_marginBottom="0dp">
+	card_view:cardUseCompatPadding="true"
+	card_view:cardElevation="@dimen/cardview_elevation"
+	android:elevation="@dimen/cardview_elevation"
+	android:layout_marginBottom="@dimen/minimal_layout_size">
 
 	<LinearLayout
 		android:id="@+id/home_recycler_item_container"
@@ -20,7 +20,7 @@
 		<ImageView
 			android:id="@+id/item_image"
 			android:layout_width="match_parent"
-			android:layout_height="200dp"
+			android:layout_height="@dimen/home_item_image_height"
 			android:contentDescription="@string/content_image_description"
 			android:scaleType="centerCrop" />
 
@@ -29,14 +29,13 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_below="@+id/item_image"
-            android:layout_alignParentBottom="true"
-			android:paddingBottom="9dp"
-			android:paddingTop="9dp"
+			android:layout_alignParentBottom="true"
+			android:paddingBottom="@dimen/item_title_padding"
+			android:paddingTop="@dimen/item_title_padding"
 			android:gravity="center_horizontal"
-			android:background="#1976D2"
-            android:textStyle="bold"
-            style="@style/Base.TextAppearance.AppCompat.Large.Inverse"/>
+			android:background="@color/colorPrimaryDark"
+			android:textStyle="bold"
+			style="@style/Base.TextAppearance.AppCompat.Large.Inverse"/>
 
 	</LinearLayout>
-
 </android.support.v7.widget.CardView>
