--- a/pocket-buddha/app/src/main/res/layout/line_divider.xml
+++ b/pocket-buddha/app/src/main/res/layout/line_divider.xml
@@ -4,9 +4,10 @@
 	android:orientation="vertical"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
+
 	<View
 		android:layout_width="match_parent"
-		android:layout_height="1dp"
+		android:layout_height="@dimen/line_divider_height"
 		android:layout_marginTop="@dimen/activity_vertical_margin"
 		android:background="@color/gray"/>
 
