--- a/pocket-buddha/app/src/main/res/layout/menu_detail_floating_buttons.xml
+++ b/pocket-buddha/app/src/main/res/layout/menu_detail_floating_buttons.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:app="http://schemas.android.com/tools">
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:fab="http://schemas.android.com/apk/res-auto"
+	xmlns:app="http://schemas.android.com/tools">
+
 	<com.github.clans.fab.FloatingActionMenu
 		android:id="@+id/fab_menu_detail_drawer"
 		android:layout_width="match_parent"
@@ -16,32 +17,23 @@
 		fab:menu_labels_ellipsize="end"
 		fab:menu_labels_singleLine="true">
 
-		<!--<com.github.clans.fab.FloatingActionButton-->
-			<!--android:id="@+id/fab_favorite"-->
-			<!--android:layout_width="wrap_content"-->
-			<!--android:layout_height="wrap_content"-->
-			<!--android:src="@drawable/ic_star"-->
-            <!--android:onClick="onFavoriteItClicked"-->
-			<!--fab:fab_size="mini"-->
-			<!--fab:fab_label="Star It!"/>-->
-
 		<com.github.clans.fab.FloatingActionButton
 			android:id="@+id/fab_share"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:src="@drawable/ic_share_white_24dp"
-            android:onClick="onShareItClicked"
+			android:onClick="onShareItClicked"
 			fab:fab_size="mini"
-			fab:fab_label="Share It!"/>
+			fab:fab_label="@string/fab_label_share"/>
 
 		<com.github.clans.fab.FloatingActionButton
 			android:id="@+id/fab_play"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:src="@drawable/ic_progress"
-            android:onClick="onPlayItClicked"
-            app:fab_progress_color="@color/colorPrimary"
+			android:onClick="onPlayItClicked"
+			app:fab_progress_color="@color/colorPrimary"
 			fab:fab_size="mini"
-			fab:fab_label="Play It!"/>
+			fab:fab_label="@string/fab_label_play"/>
 	</com.github.clans.fab.FloatingActionMenu>
 </LinearLayout>
