--- a/pocket-buddha/app/src/main/res/layout/widget_layout.xml
+++ b/pocket-buddha/app/src/main/res/layout/widget_layout.xml
@@ -17,8 +17,8 @@
 		android:layout_height="match_parent"
 		android:gravity="center"
 		android:text="@string/widget_empty_msg"
-		android:textColor="#ffffff"
-		android:textSize="20sp"
-		android:visibility="gone" />
+		android:textColor="@color/white"
+		android:visibility="gone"
+		style="@style/Base.TextAppearance.AppCompat.Medium"/>
 
 </LinearLayout>
