--- a/pocket-buddha/app/src/main/res/values/dimens.xml
+++ b/pocket-buddha/app/src/main/res/values/dimens.xml
@@ -1,19 +1,46 @@
 <resources>
 	<dimen name="app_bar_height">180dp</dimen>
-	<dimen name="fab_margin">16dp</dimen>
-	<dimen name="text_margin">16dp</dimen>
+
+	<dimen name="default_margin">16dp</dimen>
+	<dimen name="default_padding">16dp</dimen>
+	<dimen name="default_content_padding">8dp</dimen>
+	<dimen name="default_content_margin">8dp</dimen>
+	<dimen name="default_linespace">8dp</dimen>
+
+	<dimen name="line_divider_height">1dp</dimen>
+
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="nav_header_vertical_spacing">16dp</dimen>
 	<dimen name="nav_header_height">250dp</dimen>
+	<dimen name="collapsing_toolbar_height">300dp</dimen>
+	<dimen name="collapsing_toolbar_margin">94dp</dimen>
+	<dimen name="nested_scroll_view_overlap">78dp</dimen>
+	<dimen name="home_item_image_height">200dp</dimen>
+
 	<!-- Default screen margins, per the Android Design guidelines. -->
 	<dimen name="activity_horizontal_margin">16dp</dimen>
 	<dimen name="activity_vertical_margin">16dp</dimen>
 
 	<dimen name="cardview_linespacing_extra">6dp</dimen>
 	<dimen name="cardview_icon_padding_right">5dp</dimen>
+	<dimen name="cardview_content_padding">16dp</dimen>
+	<dimen name="cardview_elevation">11dp</dimen>
 
 	<dimen name="splash_screen_image_size">275dp</dimen>
 
 	<dimen name="widget_default_height">110dp</dimen>
 	<dimen name="widget_default_width">250dp</dimen>
+
+	<dimen name="drawable_circle_size">36dp</dimen>
+
+	<dimen name="minimal_layout_size">0dp</dimen>
+	<dimen name="swipe_reveal_layout_width">60dp</dimen>
+
+	<dimen name="recycler_view_padding_default">4dp</dimen>
+	<dimen name="recycler_view_padding_sides">2dp</dimen>
+
+	<dimen name="app_card_size">4dp</dimen>
+	<dimen name="icon_padding">6dp</dimen>
+	<dimen name="item_title_padding">9dp</dimen>
+    <dimen name="widget_padding">4dp</dimen>
 </resources>
