--- a/pocket-buddha/app/src/main/res/layout/home_recycler_view.xml
+++ b/pocket-buddha/app/src/main/res/layout/home_recycler_view.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:paddingTop="?attr/actionBarSize"
+	android:paddingTop="@dimen/recycler_view_margin_top"
 	android:orientation="vertical">
 
 	<android.support.v7.widget.RecyclerView
