--- a/pocket-buddha/app/src/main/res/menu/main_drawer.xml
+++ b/pocket-buddha/app/src/main/res/menu/main_drawer.xml
@@ -1,74 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<menu xmlns:android="http://schemas.android.com/apk/res/android">-->
-
-	<!--<group android:checkableBehavior="single">-->
-		<!--<item-->
-			<!--android:id="@+id/nav_camera"-->
-			<!--android:icon="@drawable/ic_menu_camera"-->
-			<!--android:title="Import"/>-->
-		<!--<item-->
-			<!--android:id="@+id/nav_gallery"-->
-			<!--android:icon="@drawable/ic_menu_gallery"-->
-			<!--android:title="Gallery"/>-->
-		<!--<item-->
-			<!--android:id="@+id/nav_slideshow"-->
-			<!--android:icon="@drawable/ic_menu_slideshow"-->
-			<!--android:title="Slideshow"/>-->
-		<!--<item-->
-			<!--android:id="@+id/nav_manage"-->
-			<!--android:icon="@drawable/ic_menu_manage"-->
-			<!--android:title="Tools"/>-->
-	<!--</group>-->
-
-	<!--<item android:title="Communicate">-->
-		<!--<menu>-->
-			<!--<item-->
-				<!--android:id="@+id/nav_share"-->
-				<!--android:icon="@drawable/ic_menu_share"-->
-				<!--android:title="Share"/>-->
-			<!--<item-->
-				<!--android:id="@+id/nav_send"-->
-				<!--android:icon="@drawable/ic_menu_send"-->
-				<!--android:title="Send"/>-->
-		<!--</menu>-->
-	<!--</item>-->
-
-<!--</menu>-->
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-	<!--<item android:title="@string/home_drawer_daily_feeds_group">-->
-		<!--<menu>-->
-			<!--<group android:checkableBehavior="single">-->
-				<!--<item-->
-					<!--android:id="@+id/nav_articles"-->
-					<!--android:icon="@drawable/ic_library_books_black_24dp"-->
-					<!--android:title="@string/home_drawer_articles"/>-->
-				<!--<item-->
-					<!--android:id="@+id/nav_podcasts"-->
-					<!--android:icon="@drawable/ic_play_circle_outline_black_24dp"-->
-					<!--android:title="@string/home_drawer_podcasts"/>-->
-				<!--<item-->
-					<!--android:id="@+id/nav_images"-->
-					<!--android:icon="@drawable/ic_menu_gallery"-->
-					<!--android:title="@string/home_drawer_images"/>-->
-			<!--</group>-->
-		<!--</menu>-->
-	<!--</item>-->
-	<item android:title="@string/home_drawer_contribute_group">
-		<menu>
-			<item
-				android:id="@+id/nav_about"
-				android:icon="@drawable/ic_menu_send"
-				android:title="@string/home_drawer_about"/>
-			<item
-				android:id="@+id/nav_view_ad"
-				android:icon="@drawable/ic_videocam_black_24dp"
-				android:title="@string/home_drawer_contribute_view_ad"/>
-			<item
-				android:id="@+id/nav_invitation"
-				android:icon="@drawable/ic_menu_share"
-				android:title="@string/home_drawer_contribute_invitation"/>
-		</menu>
-	</item>
+	<group android:checkableBehavior="all">
+		<item
+			android:id="@+id/nav_home"
+			android:icon="@drawable/ic_home_white_24dp"
+			android:title="@string/home_drawer_home"/>
+		<item
+			android:id="@+id/nav_favorites"
+			android:icon="@drawable/ic_star"
+			android:title="@string/home_drawer_favorites"/>
+		<item
+			android:id="@+id/nav_about"
+			android:icon="@drawable/ic_info_white_24dp"
+			android:title="@string/home_drawer_about"/>
+		<item
+			android:id="@+id/nav_credits"
+			android:icon="@drawable/ic_description_white_24dp"
+			android:title="@string/home_drawer_credits"/>
+	</group>
 </menu>
