--- a/pocket-buddha/app/src/main/res/layout/favorites_recycler_view.xml
+++ b/pocket-buddha/app/src/main/res/layout/favorites_recycler_view.xml
@@ -14,4 +14,14 @@
 		android:paddingRight="@dimen/recycler_view_padding_sides"
 		android:paddingLeft="@dimen/recycler_view_padding_sides"/>
 
+	<TextView
+		android:id="@+id/favorites_list_recycler_empty"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="@dimen/activity_horizontal_margin"
+		android:layout_marginLeft="@dimen/activity_horizontal_margin"
+		android:layout_gravity="top"
+		android:gravity="center_horizontal"
+		style="@style/Base.TextAppearance.AppCompat.Medium"
+		android:text="@string/msg_favorite_items_empty" />
 </LinearLayout>
