--- a/pocket-buddha/app/src/main/res/layout/menu_detail_floating_buttons.xml
+++ b/pocket-buddha/app/src/main/res/layout/menu_detail_floating_buttons.xml
@@ -4,7 +4,7 @@
 	android:layout_height="match_parent"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:fab="http://schemas.android.com/apk/res-auto"
-	xmlns:app="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 	<com.github.clans.fab.FloatingActionMenu
 		android:id="@+id/fab_menu_detail_drawer"
