Preparing for 1.1 release

--- a/pocket-buddha/app/src/main/res/layout/splash_screen.xml
+++ b/pocket-buddha/app/src/main/res/layout/splash_screen.xml
@@ -11,6 +11,8 @@
 		android:id="@+id/splash_screen_imageview"
 		android:layout_width="@dimen/splash_screen_image_size"
 		android:layout_height="@dimen/splash_screen_image_size"
+		android:layout_gravity="center"
+		android:src="@drawable/happy_monk_275x275"
 		android:contentDescription="@string/content_home_description"/>
 
 	<TextView
